Separado em mais arquivos

--- a/game/src/CMakeLists.txt
+++ b/game/src/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(lib)
 target_include_directories(IsometricGame PRIVATE ${CMAKE_SOURCE_DIR}/include/glad ${glm_SOURCE_DIR} ${stb_image_SOURCE_DIR})
 target_link_libraries(IsometricGame glfw ${OPENGL_LIBS})
 target_link_libraries(IsometricGame IsometricGame_lib)
+target_link_libraries(IsometricGame IsometricGame_lib_shaders)
