--- a/game/src/lib/CMakeLists.txt
+++ b/game/src/lib/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(IsometricGame_lib STATIC
         Map.cpp Map.hpp
         Texture.cpp Texture.hpp
         VboHelper.cpp VboHelper.hpp
+        World.cpp World.hpp
         sprites/Sprite.cpp sprites/Sprite.hpp
         sprites/AnimatableSprite.cpp sprites/AnimatableSprite.hpp)
 
