Implementado uma camera para deixar a experiência melhor

--- a/game/src/lib/CMakeLists.txt
+++ b/game/src/lib/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(IsometricGame_lib STATIC
         Texture.cpp Texture.hpp
         VboHelper.cpp VboHelper.hpp
         World.cpp World.hpp
+        Camera.cpp Camera.hpp
         sprites/Sprite.cpp sprites/Sprite.hpp
         sprites/AnimatableSprite.cpp sprites/AnimatableSprite.hpp)
 
